Added git anchor

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 						</a>
 						<a href="https://www.instagram.com/bartecko_1">
 							<i class="fa fa-instagram fa-3x"></i>
-						</a>
+                        </a>
+                        <a href="https://github.com/bartecko">
+                            <i class="fa fa-github fa-3x"></i>
+                        </a>
 					</div>
 				</div>
 			</div>
